--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="chipNotSelect">#FF018786</color>
+    <color name="chipSelected">#FF3700B3</color>
+
+    <color name="textNotSelect">#000000</color>
+    <color name="textSelected">#FFFFFF</color>
+
+
 </resources>
